Updates to JS API, including embed-time event listeners and queued player calls
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1229 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/js/bin-debug/embed.html
+++ b/js/bin-debug/embed.html
@@ -7,8 +7,8 @@
 			var options = {
 				image:		'../../../testing/files/bunny.jpg',
 				players: [
-					{type:'html5'},
 					{type:'flash', src: '../../../trunk/fl5/player.swf'},
+					{type:'html5'},
 				],
 				skin: '',
 				levels: [
@@ -16,8 +16,7 @@
 				]
 			}; 
 			function embedPlayer(id) {
-				$jw(id).setup(options);
-				$jw(id).onPlay(function() {
+				$jw(id).setup(options).play().onPlay(function() {
 					alert("Playing!");
 				});
 			}	
