--- a/html5/test/examples/single_mp4.html
+++ b/html5/test/examples/single_mp4.html
@@ -1,38 +1,43 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-<body>
-<h1>Single MP4 video</h1>
-
-
-
-
-
-<p>This is the basic setup for a video that plays on Safari,iPhone/iPad and Chrome. Firefox, IE and Opera will fallback to Flash. A poster image is included.</p>
-
-<p><video height="270" id="player" poster="http://content.bitsontherun.com/thumbs/nPripu9l-320.jpg" src="http://content.bitsontherun.com/videos/nPripu9l-327.mp4" width="480"></video></p>
-
-<script type="text/javascript" src="../../lib/jquery.js"></script>
-<script type="text/javascript" src="../../jwplayer.js"></script>
-<script type="text/javascript">
-	var player = new jwplayer.html5(document.getElementById("player"));
-	player.setup({
-		sources: [{
-			file:"http://content.bitsontherun.com/videos/nPripu9l-327.mp4",
-			type: "video/mp4"
-		}],
-		flashplayer:'/files/player.swf',
-		skin:'/files/skins/five/five.xml'
-	});
-</script>
-
-<h3>HTML code</h3>
-<p>Here is the code for this setup. Make sure to change all links to the scripts, player, image and video. They must refer to the correct files on your server.</p>
-
-<p>First, place this code in the <strong>&lt;head&gt;</strong> of your page:</p>
-<pre>&lt;script type="text/javascript" src="/scripts/jquery.js"&gt;&lt;/script&gt;
+	<head>
+		<title>Single MP4 Example</title>
+	</head>
+    <body>
+        <h1>Single MP4 video</h1>
+        <p>
+            This is the basic setup for a video that plays on Safari,iPhone/iPad and Chrome. Firefox, IE and Opera will fallback to Flash. A poster image is included.
+        </p>
+        <p>
+            <video height="270" id="player" poster="http://content.bitsontherun.com/thumbs/nPripu9l-320.jpg" src="http://content.bitsontherun.com/videos/nPripu9l-327.mp4" width="480">
+            </video>
+        </p>
+        <script type="text/javascript" src="../../../js/bin-debug/jwplayer.js">
+        </script>
+        <script type="text/javascript" src="../../bin-debug/jwplayer.html5.js">
+        </script>
+        <script type="text/javascript">
+            var player = new jwplayer.html5(document.getElementById("player"));
+            player.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+				image: "../../../js/test/files/bunny.jpg"
+            
+            });
+        </script>
+        <h3>HTML code</h3>
+        <p>
+            Here is the code for this setup. Make sure to change all links to the scripts, player, image and video. They must refer to the correct files on your server.
+        </p>
+        <p>
+            First, place this code in the <strong>&lt;head&gt;</strong>
+            of your page:
+        </p>
+        <pre>&lt;script type="text/javascript" src="/scripts/jquery.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript" src="/scripts/jquery.jwplayer.js"&gt;&lt;/script&gt;</pre>
-
-<p>Second, place this code where you want the video to appear:</p>
-<pre>&lt;video height="270" id="player" poster="/files/bunny.jpg"
+        <p>
+            Second, place this code where you want the video to appear:
+        </p>
+        <pre>&lt;video height="270" id="player" poster="/files/bunny.jpg"
   src="/files/bunny.mp4" width="480"&gt;
 
 &lt;script type="text/javascript"&gt;
@@ -41,10 +46,5 @@
     skin:'/files/five.xml'
   });
 &lt;/script&gt;</pre>
-
-
-
-
-
-</body>
+    </body>
 </html>
