--- a/html5/test/examples/multiple_customs.html
+++ b/html5/test/examples/multiple_customs.html
@@ -1,50 +1,57 @@
 <html>
-<body>
-
-<h1>Multiple custom players.</h1>
-
-
-
-
-
-
-<p>Multiple players on one page. Different videos and different options.</p>
-
-<h3>Player 1:</h3>
-<script type="text/javascript" src="/jw/js/jquery.jwplayer.js"></script>
-<p><video height="270" id="player1" poster="/jw/upload/bunny.jpg" src="/jw/upload/bunny.mp4" width="480"></video></p>
-<script type="text/javascript">
-	$('#player1').jwplayer({
-		autostart:true,
-		flashplayer:'/files/player.swf',
-		mute:true,
-		skin:'/files/skins/five/five.xml'
-	});
-</script>
-
-
-<h3>Player 2:</h3>
-<p><video height="270" id="player2" poster="/jw/upload/corrie.jpg" src="/jw/upload/corrie.mp4" width="480"></video></p>
-<script type="text/javascript">
-	$('#player2').jwplayer({
-		duration:45,
-		screencolor:'00bee0',
-		skin:'/files/skins/stormtrooper/stormtrooper.xml'
-	});
-</script>
-
-
-
-<h3>HTML code</h3>
-<p>Multiple players on one page. Different videos and <a href="/support/jw-player/html5-player/11289/configuration-options-of-the-jw-player-for-html5">different options</a>. The first player is set to autostart muted. The second player has pre-set duration, but no flashplayer fallback. Both have a custom skin.</p>
-
-
-<p>First, place this code in the <ems>&lt;head&gt;</ems> of your page:</p>
-<pre>&lt;script type="text/javascript" src="/scripts/jquery.js"&gt;&lt;/script&gt;
+    <head>
+        <title>Multiple custom players</title>
+    </head>
+    <body>
+        <h1>Multiple custom players.</h1>
+        <p>
+            Multiple players on one page. Different videos and different options.
+        </p>
+        <h3>Player 1:</h3>
+        <script type="text/javascript" src="../../../js/bin-debug/jwplayer.js">
+        </script>
+        <script type="text/javascript" src="../../bin-debug/jwplayer.html5.js">
+        </script>
+        <div height="270" id="player1" width="480">
+        </div>
+        <script type="text/javascript">
+            var player1 = new jwplayer.html5(document.getElementById("player1"));
+            player1.setup({
+            	autostart: true,
+            	mute: true,
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg"
+            
+            });
+        </script>
+        <h3>Player 2:</h3>
+        <div height="270" id="player2" width="480">
+        </div>
+        <script type="text/javascript">
+            var player2 = new jwplayer.html5(document.getElementById("player2"));
+            player2.setup({
+            	screencolor: "00bee0",
+            	duration: 45,
+            	volume: 50,
+            	file: "../../../js/test/files/oorlogswinter.mp4",
+            	image: "../../../js/test/files/oorlogswinter.png",
+            	skin: "../../../../skins/stormtrooper/stormtrooper.xml"
+            });
+        </script>
+        <h3>HTML code</h3>
+        <p>
+            Multiple players on one page. Different videos and <a href="/support/jw-player/html5-player/11289/configuration-options-of-the-jw-player-for-html5">different options</a>. The first player is set to autostart muted. The second player has pre-set duration, but no flashplayer fallback. Both have a custom skin.
+        </p>
+        <p>
+            First, place this code in the <em>&lt;head&gt;</em>
+            of your page:
+        </p>
+        <pre>&lt;script type="text/javascript" src="/scripts/jquery.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript" src="/scripts/jquery.jwplayer.js"&gt;&lt;/script&gt;</pre>
-
-<p>Second, place this code where you want the first video to appear:</p>
-<pre>&lt;video height="270" id="player1" src="/files/bunny.mp4" width="480"&gt;
+        <p>
+            Second, place this code where you want the first video to appear:
+        </p>
+        <pre>&lt;video height="270" id="player1" src="/files/bunny.mp4" width="480"&gt;
 &lt;script type="text/javascript"&gt;
   $('#player1').jwplayer({
     autostart:true,
@@ -53,9 +60,10 @@
     skin:'/files/five.xml'
 });
 &lt;/script&gt;</pre>
-
-<p>Third, place this code where you want the second video to appear:</p>
-<pre>&lt;video height="270" id="player2" src="/files/corrie.mp4" width="480"&gt;
+        <p>
+            Third, place this code where you want the second video to appear:
+        </p>
+        <pre>&lt;video height="270" id="player2" src="/files/corrie.mp4" width="480"&gt;
 
 &lt;script type="text/javascript"&gt;
   $('#player2').jwplayer({
@@ -64,11 +72,9 @@
     skin:'/files/stormtrooper.xml'
 });
 &lt;/script&gt;</pre>
-
-<p>Note that the <i>jwplayer()</i> function is called twice. This allows us to set different options for the two players.</p>
-
-
-
-
-</body>
+        <p>
+            Note that the <i>jwplayer()</i>
+            function is called twice. This allows us to set different options for the two players.
+        </p>
+    </body>
 </html>
