Fixing fullscreen issue
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1303 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/test/examples/index.html
+++ b/html5/test/examples/index.html
@@ -8,12 +8,20 @@
 		<script type="text/javascript">
 			var list = document.getElementById("examples");
 			var examples = {
+				"Video tag embed": "videotag.html",
+				"Object and embed tags": "objectembed.html",
 				"Single MP4": "single_mp4.html",
 				"Single OGV": "single_ogg.html",
+				"YouTube":"youtube.html",
 				"Multiple sources (MP4 and OGV)": "mp4_ogg.html",
 				"Multiple players": "multiple_players.html",
 				"Custom Skin": "custom_skin.html",
-				"Multiple players with custom skins": "multiple_customs.html"
+				"Multiple players with custom skins": "multiple_customs.html",
+				"Playlists": "playlist.html",
+				"Controlbar": "controlbar.html",
+				"Logo": "logo.html",
+				"API": "api.html",
+				"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
 				var listItem = document.createElement("li");
