--- a/html5/test/examples/custom_skin.html
+++ b/html5/test/examples/custom_skin.html
@@ -7,15 +7,165 @@
         <p>
             A setup with MP4 video and custom player skin. Any JW Player PNG skin is supported!
         </p>
-        <div height="270" id="player" width="480">
-        </div>
         <script type="text/javascript" src="../../../js/bin-debug/jwplayer.js">
         </script>
         <script type="text/javascript" src="../../bin-debug/jwplayer.html5.js">
         </script>
+        <div height="270" id="beelden" width="480">
+        </div>
         <script type="text/javascript">
-            var player = new jwplayer.html5(document.getElementById("player"));
-            player.setup({
+            var beelden = new jwplayer.html5(document.getElementById("beelden"));
+            beelden.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/beelden/beelden.xml"
+            });
+        </script>
+        <div height="270" id="bekle" width="480">
+        </div>
+        <script type="text/javascript">
+            var bekle = new jwplayer.html5(document.getElementById("bekle"));
+            bekle.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/bekle/bekle.xml"
+            });
+        </script>
+        <div height="270" id="classic" width="480">
+        </div>
+        <script type="text/javascript">
+            var classic = new jwplayer.html5(document.getElementById("classic"));
+            classic.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/classic/classic.xml"
+            });
+        </script>
+        <div height="270" id="five" width="480">
+        </div>
+        <script type="text/javascript">
+            var five = new jwplayer.html5(document.getElementById("five"));
+            five.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/five/five.xml"
+            });
+        </script>
+        <div height="270" id="glow" width="480">
+        </div>
+        <script type="text/javascript">
+            var glow = new jwplayer.html5(document.getElementById("glow"));
+            glow.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/glow/glow.xml"
+            });
+        </script>
+        <div height="270" id="grungetape" width="480">
+        </div>
+        <script type="text/javascript">
+            var grungetape = new jwplayer.html5(document.getElementById("grungetape"));
+            grungetape.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/grungetape/grungetape.xml"
+            });
+        </script>
+        <div height="270" id="icecreamsneaka" width="480">
+        </div>
+        <script type="text/javascript">
+            var icecreamsneaka = new jwplayer.html5(document.getElementById("icecreamsneaka"));
+            icecreamsneaka.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/icecreamsneaka/icecreamsneaka.xml"
+            });
+        </script>
+        <div height="270" id="kleur" width="480">
+        </div>
+        <script type="text/javascript">
+            var kleur = new jwplayer.html5(document.getElementById("kleur"));
+            kleur.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/kleur/kleur.xml"
+            });
+        </script>
+        <div height="270" id="lulu" width="480">
+        </div>
+        <script type="text/javascript">
+            var lulu = new jwplayer.html5(document.getElementById("lulu"));
+            lulu.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/lulu/lulu.xml"
+            });
+        </script>
+        <div height="270" id="modieus" width="480">
+        </div>
+        <script type="text/javascript">
+            var modieus = new jwplayer.html5(document.getElementById("modieus"));
+            modieus.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/modieus/modieus.xml"
+            });
+        </script>
+        <div height="270" id="nacht" width="480">
+        </div>
+        <script type="text/javascript">
+            var nacht = new jwplayer.html5(document.getElementById("nacht"));
+            nacht.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/nacht/nacht.xml"
+            });
+        </script>
+        <div height="270" id="playcasso" width="480">
+        </div>
+        <script type="text/javascript">
+            var playcasso = new jwplayer.html5(document.getElementById("playcasso"));
+            playcasso.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/playcasso/playcasso.xml"
+            });
+        </script>
+        <div height="270" id="schoon" width="480">
+        </div>
+        <script type="text/javascript">
+            var schoon = new jwplayer.html5(document.getElementById("schoon"));
+            schoon.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/schoon/schoon.xml"
+            });
+        </script>
+        <div height="270" id="snel" width="480">
+        </div>
+        <script type="text/javascript">
+            var snel = new jwplayer.html5(document.getElementById("snel"));
+            snel.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/snel/snel.xml"
+            });
+        </script>
+        <div height="270" id="stijl" width="480">
+        </div>
+        <script type="text/javascript">
+            var stijl = new jwplayer.html5(document.getElementById("stijl"));
+            stijl.setup({
+            	file: "../../../js/test/files/bunny.mp4",
+            	image: "../../../js/test/files/bunny.jpg",
+            	skin: "../../../../skins/stijl/stijl.xml"
+            });
+        </script>
+        <div height="270" id="stormtrooper" width="480">
+        </div>
+        <script type="text/javascript">
+            var stormtrooper = new jwplayer.html5(document.getElementById("stormtrooper"));
+            stormtrooper.setup({
             	file: "../../../js/test/files/bunny.mp4",
             	image: "../../../js/test/files/bunny.jpg",
             	skin: "../../../../skins/stormtrooper/stormtrooper.xml"
