Fixes some issues with video tag parsing in IE
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1308 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/js/test/embed.html
+++ b/js/test/embed.html
@@ -9,9 +9,10 @@
 				levels: [
 					{file: '../../../testing/files/bunny.mp4'}
 				]
-			}; 
+			};
+			 
 			function embedPlayer(id) {
-				$jw(id).setup(options, '../../../trunk/fl5/player.swf').onPlay(function() {
+				$jw(id).setup(options,'/trunk/fl5/player.swf').onPlay(function() {
 					alert("Playing!");
 				}).play();
 			}	
@@ -23,17 +24,12 @@
 		<div id="something">
 			<div id="div1"></div>
 		</div>
-		<div id="something_else">
-			<div id="div2">
-				This is &lt;div&gt; 2
-			</div>
-		</div>
 		<h3>Embed a player on a div</h3>
 		<a href="#" onclick="embedPlayer('div1'); return false;">Click here to embed player</a><br />
 		<h3>Embed a player on a video tag</h3>
 		<div>
 			<video id="a_video" src="/testing/files/bunny.mp4" width="320" height="240" poster="/testing/files/bunny.png"></video>
 		</div>
-		<a href="#" onclick="console.log($jw('a_video').setup().options); return false;">Click here to embed player</a><br />
+		<a href="#" onclick="console.log($jw('a_video').setup({flashplayer:'/trunk/fl5/player.swf'}).play().options); return false;">Click here to embed player</a><br />
 	</body>
 </html>
